[build-system]
requires = ["setuptools>=64",
            "wheel",
            "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "nrt"
description = "Online monitoring with xarray"
readme = "README.rst"
keywords = ["sentinel2", "xarray", "datacube", "monitoring", "change"]
authors = [
    { name = "Loic Dutrieux", email = "loic.dutrieux@ec.europa.eu" },
    { name = "Jonas Viehweger" },
    { name = "Chris Holden" }
]
dynamic = ["version"]
license = {text = "EUPL-1.2"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)"
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "xarray",
    "rasterio",
    "netCDF4",
    "numba!=0.59.*",
    "pandas",
    "affine",
    "nrt-data"
]

[project.urls]
"Homepage" = "https://github.com/ec-jrc/nrt.git"

[project.optional-dependencies]
tests = ["pytest"]
docs = [
    "sphinx==7.4.7",
    "dask",
    "sphinx_rtd_theme==2.0.0",
    "matplotlib==3.9.1",
    "sphinx-gallery==0.17.0"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools_scm]
fallback_version = "9999"
